--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="year">JAN 2020</div>
             <div class="cover">
                 <div id="play">
-                    <a href="#" onmousedown="futureN.play();"><i class="fas fa-play"></i></a>
+                    <a href="#" onmousedown="physical.play();"><i class="fas fa-play"></i></a>
                 </div>
             </div>
             <div class="data">
@@ -36,7 +36,7 @@
             </div>
             <div class="block-cover"></div>
             <div class="buy">
-                <p id="more">Buy Now</p>
+                <a href="https://www.youtube.com/watch?v=9HDEHj2yzew" id="more">Watch Video</a>
             </div>
         </div>
         <div class="right-col">
@@ -61,10 +61,10 @@
                     <div class="media">
                         <p>Share Now:</p>
                         <ul>
-                            <li><ion-icon name="logo-facebook"></ion-icon></li>
-                            <li><ion-icon name="logo-instagram"></ion-icon></li>
-                            <li><ion-icon name="logo-twitter"></ion-icon></li>
-                            <li><ion-icon name="logo-whatsapp"></ion-icon></li>
+                            <a href="https://www.facebook.com/dialog/share?app_id=174829003346&display=page&href=https%3A%2F%2Fopen.spotify.com%2Ftrack%2F5px6upUHM3fhOP621Edp4V%3Fsi%3D0xQ28Be-Sxmkv9PDasXJQw&redirect_uri=https%3A%2F%2Fwww.spotify.com%2Fthanks-for-sharing%2F&hashtag=%23NowPlaying"><li><ion-icon name="logo-facebook"></ion-icon></li></a>
+                            <a href="#"><li><ion-icon name="logo-instagram"></ion-icon></li></a>
+                            <a href="https://twitter.com/intent/tweet?hashtags=NowPlaying&related=spotify&text=Physical%20de%20Dua%20Lipa&url=https%3A%2F%2Fopen.spotify.com%2Ftrack%2F5px6upUHM3fhOP621Edp4V%3Fsi%3D4Q0KoLUOTQKa9fjJMNpTrw"><li><ion-icon name="logo-twitter"></ion-icon></li></a>
+                            <a href="#"><li><ion-icon name="logo-whatsapp"></ion-icon></li></a>
                         </ul>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="more">
-                    <p id="more">More Like This</p>
+                    <a href="https://open.spotify.com/artist/6M2wZ9GZgrQXHCFfjv46we?si=hl_bHqULRiiiZVF8Uxq50A" id="more">More Like This</a>
                 </div>
             </div>
             <div class="block-bottom">
